# MuxConv

./: .gitignore  README.md  requirements.txt  setup.cfg
.ipynb_checkpoints/: Conv2D_using_python_dummyKernels_1024-checkpoint.ipynb  test_buildingParConv-checkpoint.ipynb  test_buildingParConv_testOnly-checkpoint.ipynb  test_buildingParConv_testOnly_refactor-checkpoint.ipynb  test_parconv-checkpoint.ipynb  test_unpack_thorughly_this_time_1021-checkpoint.ipynb  test_unpack_throughly_continued_with_pythonConv-checkpoint.ipynb
muxcnn/: comparator.py  comparator_heaan.py  etc.py  hecnn.py  hecnn_par.py  resnet_HEAAN.py  resnet_fhe.py  resnet_muxconv.py  resnet_muxconvHer.py  utils.py
muxcnn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: CIFAR10_ResNet9_train.ipynb  CIFAR10_ResNet9_train_Hermite_Lightning.ipynb  CIFAR10_ResNet9_train_Lightning.ipynb  CIFAR10_ResNet9_train_smooth_ReLU_Lightning.ipynb  Comparator2.ipynb  HerPN_param_load.ipynb  Hermite.ipynb  MuxConv_FHE HEAAN.ipynb  MuxConv_FHE HEAAN_acc.ipynb  MuxConv_FHE.ipynb  MuxConv_FHE_compiler.ipynb  MuxConv_HEAAN_example.ipynb  MuxConv_Her_example.ipynb  MuxConv_parBN_final_example.ipynb  MuxConv_parBN_test.ipynb  MuxConv_par_BN_test.ipynb  MuxConv_par_test.ipynb  MuxConv_refactor_ResNet9.ipynb  Operation_analysis.ipynb  ResNet8.pt  ResNetHertest.ipynb  Validate-Copy1.ipynb  Validate.ipynb  Validate_torch.ipynb  fhe_config.toml  good.ipynb  good_smooth.ipynb  load_ResNetHer.ipynb  ntt_intt.ipynb  run_validation.py  smooth79.pt  smooth_sep_bn2.pt  smooth_sep_bn3.pt  test_buildingParConv.ipynb  (+2 more)
(+6 files in other folders)
