[metadata]
name = muxcnn
version = 0.0.1
author = Hoseung Choi
author_email = hschoi@dinsight.ai
description = muxed convolution for efficient FHE CNN
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://github.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True